[gd_scene load_steps=10 format=3 uid="uid://b75ctomlqpu57"]

[ext_resource type="Script" path="res://screen/main_scene.gd" id="1_oyfnf"]
[ext_resource type="PackedScene" uid="uid://b3puujsn6r2u1" path="res://player/player.tscn" id="2_vlods"]
[ext_resource type="PackedScene" uid="uid://clwgcv0adx00p" path="res://police_officer/police_officer.tscn" id="3_6rrem"]
[ext_resource type="Script" path="res://police_officer/police_manager.gd" id="4_w02wh"]

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_ypjj2"]
scenes/1/scene = ExtResource("3_6rrem")

[sub_resource type="TileSet" id="TileSet_25srq"]
tile_size = Vector2i(128, 128)
sources/1 = SubResource("TileSetScenesCollectionSource_ypjj2")

[sub_resource type="Theme" id="Theme_k4i23"]

[sub_resource type="Theme" id="Theme_meh32"]

[sub_resource type="LabelSettings" id="LabelSettings_2ovxm"]
font_size = 32
font_color = Color(0.952941, 0.113725, 0.0352941, 1)
outline_size = 3
shadow_size = 10
shadow_color = Color(0.215686, 0.215686, 0.215686, 1)

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oyfnf")

[node name="Player" parent="." instance=ExtResource("2_vlods")]
unique_name_in_owner = true
position = Vector2(64, 64)

[node name="PoliceManager" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_25srq")
format = 2
layer_0/name = "Police"
layer_0/tile_data = PackedInt32Array(262147, 1, 65536, 131077, 1, 65536, 7, 1, 65536)
script = ExtResource("4_w02wh")

[node name="GameoverPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00195)
tooltip_text = "asdf"
theme = SubResource("Theme_k4i23")

[node name="Label" type="Label" parent="GameoverPanel"]
layout_mode = 2
offset_top = 300.0
offset_right = 1152.0
offset_bottom = 348.0
theme = SubResource("Theme_meh32")
text = "BUSTED"
label_settings = SubResource("LabelSettings_2ovxm")
horizontal_alignment = 1

[connection signal="gameend" from="." to="." method="_on_gameend"]
[connection signal="next_state" from="." to="." method="_on_next_state"]
[connection signal="onchange_state" from="." to="." method="_on_onchange_state"]
[connection signal="onchange_state" from="." to="Player" method="_on_main_scene_onchange_state"]
[connection signal="onchange_state" from="." to="PoliceManager" method="_on_main_scene_onchange_state"]
[connection signal="child_entered_tree" from="PoliceManager" to="PoliceManager" method="_on_child_entered_tree"]
